fix align logo

--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -78,10 +78,10 @@ html {
   text-align: center;
 
   @media (min-width: 1024px) {
-    margin: 30px 0 0 120px;
+    margin: 30px 0 0 105px;
   }
   @media (min-width: 1280px) {
-    margin: 30px 0 0 220px;
+    margin: 30px 0 0 205px;
   }
 
   h1 {
